third_party/move/move-compiler-v2/tests/file-format-generator/bug_16222.move
module 0xc0ffee::m {
    struct Lazy(||) has drop;

    public fun make_lazy(): Lazy {
        Lazy(|| {})
    }

}

module 0xc0ffee::n {
    public fun test() {
        let l = 0xc0ffee::m::make_lazy();
        l();
    }
}
